                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 18-03-2005 fixed: AddItemToPlayList crashing in XBMChttp.cpp and XBMCweb.cpp following changes to FileItem.cpp
  - 18-03-2005 added: checkmarkexample.py & listitemexample.py sample python scripts to xbmc\scripts - thanks to gimblefoot
  - 18-03-2005 added: [ 1163487 ] Expose more CGUIListItem methods to python xbmcgui.ListItem, setLabel2() - set the second label on the list item, getLabel2() - get the second label from the list item, setThumbnailImage() - set the thumbnail image for the list item, setIconImage() - set the icon image for the list item, keyword parameters support for ListItem constructor. - thanks to gimblefoot
  - 18-03-2005 fixed: crash on startup if kai is connected
  - 17-03-2005 fixed: Song info is displayed upon song change when in a visualisation
  - 17-03-2005 fixed: "The ..." items were not sorted correctly if the following characters were T,h,e or space.
  - 17-03-2005 removed: list, listex and thumbcontrol can not be focused anymore if they have no items -> Problems in Video OSD with empty lists
  - 17-03-2005 added: a few new api's to HttpApi
  - 17-03-2005 fixed: cdda ripper doesn't use cddb info for ripping
  - 16-03-2005 fixed: crash when switching skin if kai is connected
  - 16-03-2005 fixed: [ 1072255 ][ 1157300 ] Spindown does not work for wmv9 video
  - 16-03-2005 fixed: videoplayer.year showed 0 if no movie (or no movie info) was available.
  - 16-03-2005 fixed: musicplayer.title sometimes showed file extension if Hide File Extensions was on.
  - 16-03-2005 fixed: Animated Gifs only show the first frame